--- a/starcoder_test.ipynb
+++ b/starcoder_test.ipynb
@@ -20,7 +20,7 @@
     "\n",
     "import pandas as pd\n",
     "import torch\n",
-    "from transformers import AutoTokenizer, AutoModelForCausalLM\n"
+    "from transformers import AutoTokenizer, AutoModelForCausalLM"
    ]
   },
   {
