Saved the result dataset as CSV. Fixed some errors in README.md.

--- a/tiny_starcoder_evaluation.ipynb
+++ b/tiny_starcoder_evaluation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,6 +11,7 @@
     "from manual_reviewer import ManualReviewer\n",
     "\n",
     "import pandas as pd\n",
+    "import csv\n",
     "import torch\n",
     "from transformers import AutoTokenizer, AutoModelForCausalLM\n",
     "from sklearn.metrics import accuracy_score\n",
@@ -2821,7 +2822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2830,7 +2831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2884,7 +2885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -2911,7 +2912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -2945,7 +2946,6 @@
        "      <th>exact_match</th>\n",
        "      <th>chrf</th>\n",
        "      <th>bleu</th>\n",
-       "      <th>rouge</th>\n",
        "      <th>rouge1</th>\n",
        "      <th>rouge2</th>\n",
        "      <th>rougeL</th>\n",
@@ -2964,7 +2964,6 @@
        "      <td>False</td>\n",
        "      <td>11.391510</td>\n",
        "      <td>0.027776</td>\n",
-       "      <td>{'rouge1': (0.35294117647058826, 0.31578947368...</td>\n",
        "      <td>0.333333</td>\n",
        "      <td>0.117647</td>\n",
        "      <td>0.277778</td>\n",
@@ -2981,7 +2980,6 @@
        "      <td>False</td>\n",
        "      <td>71.654203</td>\n",
        "      <td>0.493098</td>\n",
-       "      <td>{'rouge1': (0.7333333333333333, 0.647058823529...</td>\n",
        "      <td>0.687500</td>\n",
        "      <td>0.666667</td>\n",
        "      <td>0.687500</td>\n",
@@ -2998,7 +2996,6 @@
        "      <td>False</td>\n",
        "      <td>42.697590</td>\n",
        "      <td>0.273548</td>\n",
-       "      <td>{'rouge1': (0.6818181818181818, 0.6, 0.6382978...</td>\n",
        "      <td>0.638298</td>\n",
        "      <td>0.355556</td>\n",
        "      <td>0.595745</td>\n",
@@ -3015,7 +3012,6 @@
        "      <td>False</td>\n",
        "      <td>36.248252</td>\n",
        "      <td>0.039525</td>\n",
-       "      <td>{'rouge1': (0.4375, 0.4117647058823529, 0.4242...</td>\n",
        "      <td>0.424242</td>\n",
        "      <td>0.258065</td>\n",
        "      <td>0.363636</td>\n",
@@ -3032,7 +3028,6 @@
        "      <td>False</td>\n",
        "      <td>60.026336</td>\n",
        "      <td>0.142166</td>\n",
-       "      <td>{'rouge1': (0.4782608695652174, 0.6875, 0.5641...</td>\n",
        "      <td>0.564103</td>\n",
        "      <td>0.432432</td>\n",
        "      <td>0.512821</td>\n",
@@ -3084,22 +3079,15 @@
        "3  Some parts make sense, but for the main part o...        False  36.248252   \n",
        "4                           Almost entirely correct.        False  60.026336   \n",
        "\n",
-       "       bleu                                              rouge    rouge1  \\\n",
-       "0  0.027776  {'rouge1': (0.35294117647058826, 0.31578947368...  0.333333   \n",
-       "1  0.493098  {'rouge1': (0.7333333333333333, 0.647058823529...  0.687500   \n",
-       "2  0.273548  {'rouge1': (0.6818181818181818, 0.6, 0.6382978...  0.638298   \n",
-       "3  0.039525  {'rouge1': (0.4375, 0.4117647058823529, 0.4242...  0.424242   \n",
-       "4  0.142166  {'rouge1': (0.4782608695652174, 0.6875, 0.5641...  0.564103   \n",
-       "\n",
-       "     rouge2    rougeL  \n",
-       "0  0.117647  0.277778  \n",
-       "1  0.666667  0.687500  \n",
-       "2  0.355556  0.595745  \n",
-       "3  0.258065  0.363636  \n",
-       "4  0.432432  0.512821  "
+       "       bleu    rouge1    rouge2    rougeL  \n",
+       "0  0.027776  0.333333  0.117647  0.277778  \n",
+       "1  0.493098  0.687500  0.666667  0.687500  \n",
+       "2  0.273548  0.638298  0.355556  0.595745  \n",
+       "3  0.039525  0.424242  0.258065  0.363636  \n",
+       "4  0.142166  0.564103  0.432432  0.512821  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3117,7 +3105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -3163,6 +3151,22 @@
     "        s2 = f\"{scores['Spearman']:.4f}\"\n",
     "         \n",
     "    print(f\"{metric}: Pearson = {s1}, Spearman = {s2}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Save the result dataset as CSV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res.to_csv(\"result_dataset.csv\", sep='|', index=False, quoting=csv.QUOTE_MINIMAL)"
    ]
   },
   {
