Updated README.md. FIxed some issues regarding chrF. Made BLEU and ROUGE even better.

--- a/tiny_starcoder_evaluation.ipynb
+++ b/tiny_starcoder_evaluation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
     "import torch\n",
     "from transformers import AutoTokenizer, AutoModelForCausalLM\n",
     "from sklearn.metrics import accuracy_score\n",
-    "from sacrebleu import corpus_bleu\n",
+    "from sacrebleu.metrics import CHRF\n",
     "from nltk.translate.bleu_score import sentence_bleu, SmoothingFunction\n",
     "from rouge_score import rouge_scorer\n",
     "import numpy as np\n",
@@ -2822,7 +2822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2831,46 +2831,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Preprocess function for cleaning the text\n",
-    "def preprocess(text):\n",
-    "    return text.strip().lower()\n",
-    "\n",
-    "res['middle'] = res['middle'].apply(preprocess)\n",
-    "res['mid_pred'] = res['mid_pred'].apply(preprocess)\n",
-    "\n",
-    "\n",
     "# Calculate Exact Match\n",
     "def exact_match(row):\n",
     "    return row['middle'] == row['mid_pred']\n",
     "\n",
-    "def calculate_bleu(reference, hypothesis):\n",
-    "    # Apply smoothing to avoid 0 BLEU score\n",
+    "def calculate_bleu(reference, hypothesis, tokenizer):\n",
     "    smoothing_function = SmoothingFunction().method1\n",
     "\n",
+    "    # Tokenize using the model's tokenizer\n",
+    "    reference_tokens = tokenizer.tokenize(reference)\n",
+    "    hypothesis_tokens = tokenizer.tokenize(hypothesis)\n",
+    "\n",
     "    # Calculate BLEU score with smoothing\n",
-    "    bleu_score = sentence_bleu(reference, hypothesis, smoothing_function=smoothing_function)\n",
+    "    bleu_score = sentence_bleu([reference_tokens], hypothesis_tokens, smoothing_function=smoothing_function)\n",
     "\n",
     "    return bleu_score\n",
     "\n",
     "res['exact_match'] = res.apply(exact_match, axis=1)\n",
     "\n",
     "# Calculate chrF score\n",
-    "res['chrf'] = res.apply(lambda row: corpus_bleu([row['mid_pred']], [[row['middle']]]).score, axis=1)\n",
+    "chrf_metric = CHRF()\n",
+    "res['chrf'] = res.apply(lambda row: chrf_metric.sentence_score(row['mid_pred'], [row['middle']]).score, axis=1)\n",
     "\n",
     "# Calculate BLEU score\n",
-    "res['bleu'] = res.apply(lambda row: calculate_bleu([row['middle'].split()], row['mid_pred'].split()), axis=1)\n",
+    "res['bleu'] = res.apply(lambda row: calculate_bleu(row['middle'], row['mid_pred'], tokenizer), axis=1)\n",
     "\n",
     "# Calculate ROUGE score\n",
-    "def calculate_rouge(row):\n",
+    "def calculate_rouge(row, tokenizer):\n",
     "    scorer = rouge_scorer.RougeScorer(['rouge1', 'rouge2', 'rougeL'], use_stemmer=True)\n",
-    "    scores = scorer.score(row['middle'], row['mid_pred'])\n",
+    "    \n",
+    "    # Tokenize using the model's tokenizer\n",
+    "    middle_tokens = \" \".join(tokenizer.tokenize(row['middle']))\n",
+    "    mid_pred_tokens = \" \".join(tokenizer.tokenize(row['mid_pred']))\n",
+    "\n",
+    "    # Score the tokenized strings\n",
+    "    scores = scorer.score(middle_tokens, mid_pred_tokens)\n",
+    "    \n",
     "    return scores['rouge1'].fmeasure, scores['rouge2'].fmeasure, scores['rougeL'].fmeasure\n",
     "\n",
-    "res[['rouge1', 'rouge2', 'rougeL']] = res.apply(calculate_rouge, axis=1, result_type='expand')\n",
+    "res[['rouge1', 'rouge2', 'rougeL']] = res.apply(lambda row: calculate_rouge(row, tokenizer), axis=1, result_type='expand')\n",
     "\n",
     "# Combine results\n",
     "results = {\n",
@@ -2885,7 +2888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2893,10 +2896,10 @@
      "output_type": "stream",
      "text": [
       "Exact Match Score: 0.00\n",
-      "Character-Level F Score: 43.74\n",
-      "BLEU: 0.20\n",
+      "Character-Level F Score: 50.92\n",
+      "BLEU: 0.41\n",
       "Rouge-1: 0.55\n",
-      "Rouge-2: 0.40\n",
+      "Rouge-2: 0.41\n",
       "Rouge-L: 0.52\n"
      ]
     }
@@ -2912,7 +2915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -2962,59 +2965,59 @@
        "      <td>2</td>\n",
        "      <td>Some parts make sense, but mostly incorrect.</td>\n",
        "      <td>False</td>\n",
-       "      <td>11.391510</td>\n",
-       "      <td>0.027776</td>\n",
-       "      <td>0.333333</td>\n",
-       "      <td>0.117647</td>\n",
-       "      <td>0.277778</td>\n",
+       "      <td>34.728789</td>\n",
+       "      <td>0.166880</td>\n",
+       "      <td>0.315789</td>\n",
+       "      <td>0.111111</td>\n",
+       "      <td>0.263158</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>code_examples\\club_assigner.py</td>\n",
        "      <td>os.listdir(self.output_dir) if name.startswit...</td>\n",
-       "      <td>55, 255])\\n\\n        # create the mask\\n      ...</td>\n",
+       "      <td>55, 255])\\n\\n        # Create the mask\\n      ...</td>\n",
        "      <td>of masked pixels\\n        total_pixels = imag...</td>\n",
-       "      <td>, 25])\\n\\n        # define the mask\\n        m...</td>\n",
+       "      <td>, 25])\\n\\n        # Define the mask\\n        m...</td>\n",
        "      <td>0</td>\n",
        "      <td>Almost entirely correct. Some parts differ, bu...</td>\n",
        "      <td>False</td>\n",
-       "      <td>71.654203</td>\n",
-       "      <td>0.493098</td>\n",
-       "      <td>0.687500</td>\n",
-       "      <td>0.666667</td>\n",
-       "      <td>0.687500</td>\n",
+       "      <td>71.537062</td>\n",
+       "      <td>0.755993</td>\n",
+       "      <td>0.761905</td>\n",
+       "      <td>0.700000</td>\n",
+       "      <td>0.761905</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>code_examples\\ball_to_player_assigner.py</td>\n",
        "      <td>ball_speed\\n        self.speed_check_frames = ...</td>\n",
-       "      <td>bool: true if the ball movement is valid, fals...</td>\n",
+       "      <td>bool: True if the ball movement is valid, Fal...</td>\n",
        "      <td>_pos, last_frame = self.ball_history[-1]\\n\\n  ...</td>\n",
-       "      <td>bool: true if the ball is moving, false otherw...</td>\n",
+       "      <td>bool: True if the ball is moving, False other...</td>\n",
        "      <td>1</td>\n",
        "      <td>The comment is entirely correct, but the follo...</td>\n",
        "      <td>False</td>\n",
-       "      <td>42.697590</td>\n",
-       "      <td>0.273548</td>\n",
-       "      <td>0.638298</td>\n",
-       "      <td>0.355556</td>\n",
-       "      <td>0.595745</td>\n",
+       "      <td>50.865618</td>\n",
+       "      <td>0.411727</td>\n",
+       "      <td>0.625000</td>\n",
+       "      <td>0.347826</td>\n",
+       "      <td>0.583333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>code_examples\\football_video_processor.py</td>\n",
        "      <td>()[-1]\\n        possession_club1 = possession[...</td>\n",
-       "      <td>_color)\\n\\n        # draw club 1's possession ...</td>\n",
+       "      <td>_color)\\n\\n        # Draw club 1's possession ...</td>\n",
        "      <td>width, bar_y + bar_height), club1_color, -1)\\n...</td>\n",
        "      <td>_color)\\n        neutral_color = rgb_bgr_conve...</td>\n",
        "      <td>2</td>\n",
        "      <td>Some parts make sense, but for the main part o...</td>\n",
        "      <td>False</td>\n",
-       "      <td>36.248252</td>\n",
-       "      <td>0.039525</td>\n",
-       "      <td>0.424242</td>\n",
-       "      <td>0.258065</td>\n",
-       "      <td>0.363636</td>\n",
+       "      <td>45.801120</td>\n",
+       "      <td>0.388708</td>\n",
+       "      <td>0.421053</td>\n",
+       "      <td>0.277778</td>\n",
+       "      <td>0.368421</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -3026,11 +3029,11 @@
        "      <td>0</td>\n",
        "      <td>Almost entirely correct.</td>\n",
        "      <td>False</td>\n",
-       "      <td>60.026336</td>\n",
-       "      <td>0.142166</td>\n",
-       "      <td>0.564103</td>\n",
-       "      <td>0.432432</td>\n",
-       "      <td>0.512821</td>\n",
+       "      <td>59.635186</td>\n",
+       "      <td>0.537907</td>\n",
+       "      <td>0.468085</td>\n",
+       "      <td>0.355556</td>\n",
+       "      <td>0.425532</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -3053,9 +3056,9 @@
        "\n",
        "                                              middle  \\\n",
        "0  _dir\\n        self.obj_path = os.path.join(sel...   \n",
-       "1  55, 255])\\n\\n        # create the mask\\n      ...   \n",
-       "2  bool: true if the ball movement is valid, fals...   \n",
-       "3  _color)\\n\\n        # draw club 1's possession ...   \n",
+       "1  55, 255])\\n\\n        # Create the mask\\n      ...   \n",
+       "2   bool: True if the ball movement is valid, Fal...   \n",
+       "3  _color)\\n\\n        # Draw club 1's possession ...   \n",
        "4  .resize(projection_frame, (new_w_proj, new_h_p...   \n",
        "\n",
        "                                              suffix  \\\n",
@@ -3067,27 +3070,27 @@
        "\n",
        "                                            mid_pred  label  \\\n",
        "0  _dir\\n        self.object_fname = object_fname...      2   \n",
-       "1  , 25])\\n\\n        # define the mask\\n        m...      0   \n",
-       "2  bool: true if the ball is moving, false otherw...      1   \n",
+       "1  , 25])\\n\\n        # Define the mask\\n        m...      0   \n",
+       "2   bool: True if the ball is moving, False other...      1   \n",
        "3  _color)\\n        neutral_color = rgb_bgr_conve...      2   \n",
        "4  .resize(projection_frame, (new_w_proj, new_h_p...      0   \n",
        "\n",
        "                                             comment  exact_match       chrf  \\\n",
-       "0       Some parts make sense, but mostly incorrect.        False  11.391510   \n",
-       "1  Almost entirely correct. Some parts differ, bu...        False  71.654203   \n",
-       "2  The comment is entirely correct, but the follo...        False  42.697590   \n",
-       "3  Some parts make sense, but for the main part o...        False  36.248252   \n",
-       "4                           Almost entirely correct.        False  60.026336   \n",
+       "0       Some parts make sense, but mostly incorrect.        False  34.728789   \n",
+       "1  Almost entirely correct. Some parts differ, bu...        False  71.537062   \n",
+       "2  The comment is entirely correct, but the follo...        False  50.865618   \n",
+       "3  Some parts make sense, but for the main part o...        False  45.801120   \n",
+       "4                           Almost entirely correct.        False  59.635186   \n",
        "\n",
        "       bleu    rouge1    rouge2    rougeL  \n",
-       "0  0.027776  0.333333  0.117647  0.277778  \n",
-       "1  0.493098  0.687500  0.666667  0.687500  \n",
-       "2  0.273548  0.638298  0.355556  0.595745  \n",
-       "3  0.039525  0.424242  0.258065  0.363636  \n",
-       "4  0.142166  0.564103  0.432432  0.512821  "
+       "0  0.166880  0.315789  0.111111  0.263158  \n",
+       "1  0.755993  0.761905  0.700000  0.761905  \n",
+       "2  0.411727  0.625000  0.347826  0.583333  \n",
+       "3  0.388708  0.421053  0.277778  0.368421  \n",
+       "4  0.537907  0.468085  0.355556  0.425532  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3105,7 +3108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -3114,11 +3117,11 @@
      "text": [
       "Correlations with Manual Labels:\n",
       "exact_match: Pearson = None, Spearman = None\n",
-      "chrf: Pearson = -0.6995, Spearman = -0.7090\n",
-      "bleu: Pearson = -0.7074, Spearman = -0.7609\n",
-      "rouge1: Pearson = -0.6045, Spearman = -0.6178\n",
-      "rouge2: Pearson = -0.6586, Spearman = -0.6479\n",
-      "rougeL: Pearson = -0.6698, Spearman = -0.6521\n"
+      "chrf: Pearson = -0.5981, Spearman = -0.6057\n",
+      "bleu: Pearson = -0.7144, Spearman = -0.7147\n",
+      "rouge1: Pearson = -0.6044, Spearman = -0.6053\n",
+      "rouge2: Pearson = -0.6431, Spearman = -0.6369\n",
+      "rougeL: Pearson = -0.6605, Spearman = -0.6228\n"
      ]
     }
    ],
@@ -3162,7 +3165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3180,11 +3183,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. **Avoid Using Exact Match**: Since the exact match did not provide meaningful correlations, it should not be used in evaluation.\n",
+    "1. **Exact Match has no meaningful correlation with the manual labels**, as both Pearson and Spearman correlations are undefined.\n",
     "\n",
-    "2. **Use BLEU and chrF**: The negative correlations for both the chrF score and the BLEU score indicate that these metrics are inversely related to the quality of the predictions. As these scores increase, the likelihood of being labeled as correct also increases, making them strong candidates for evaluating model performance.\n",
+    "2. **chrf has a moderate correlation**, indicating that this metric aligns reasonably well with manual evaluations.\n",
     "\n",
-    "3. **The ROUGE metrics** (ROUGE-1, ROUGE-2, and ROUGE-L) show similar trends, with negative correlations. These scores also effectively reflect the model's ability to generate relevant and coherent code completions, particularly in terms of n-gram overlap."
+    "3. **BLEU demonstrates the strongest correlation with manual labels**, making it the most reliable metric in this evaluation.\n",
+    "\n",
+    "4. **ROUGE-1 and ROUGE-2 and ROUGE-L also show moderate positive correlations**, indicating moderate agreement with manual labels."
    ]
   },
   {
@@ -3198,11 +3203,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. **Focus on chrF and BLEU scores** for evaluating model performance, as they demonstrate a robust inverse relationship with manual correctness labels.\n",
+    "1. **Focus on BLEU score for evaluating model performance**\n",
     "\n",
-    "2. **Consider ROUGE scores as supplementary metrics**, especially for understanding the quality of generated outputs in relation to reference completions.\n",
+    "2. **Consider ROUGE-L, ROUGE-2 and ROUGE-1 scores as secondary metrics**, providing additional insights into the quality of generated outputs compared to reference completions.\n",
     "\n",
-    "3. **Do not use exact match**, as it may not capture the complexity of code generation tasks where variations can still be valid."
+    "3. **Do not use exact match**, as it shows no significant correlation and may fail to capture the nuances of code generation tasks where variations in output can still be valid."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Summary of Recommended Metrics:\n",
+    "1. **Primary Metric**: BLEU\n",
+    "2. **Secondary Metrics**: ROUGE-L, and maybe ROUGE-2 and ROUGE-1"
    ]
   }
  ],
