Update conclusions in README.md and tiny_starcoder_evaluation.ipynb.

--- a/tiny_starcoder_evaluation.ipynb
+++ b/tiny_starcoder_evaluation.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\mihai\\OneDrive\\Desktop\\tiny-starcoder-evaluation\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from data_fetcher import clone_repo, collect_python_files\n",
     "from split_generator import SplitGenerator\n",
@@ -14,7 +23,6 @@
     "import csv\n",
     "import torch\n",
     "from transformers import AutoTokenizer, AutoModelForCausalLM\n",
-    "from sklearn.metrics import accuracy_score\n",
     "from sacrebleu.metrics import CHRF\n",
     "from nltk.translate.bleu_score import sentence_bleu, SmoothingFunction\n",
     "from rouge_score import rouge_scorer\n",
@@ -280,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2822,7 +2830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2831,7 +2839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2888,7 +2896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -2915,7 +2923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -2965,7 +2973,7 @@
        "      <td>2</td>\n",
        "      <td>Some parts make sense, but mostly incorrect.</td>\n",
        "      <td>False</td>\n",
-       "      <td>34.728789</td>\n",
+       "      <td>0.347288</td>\n",
        "      <td>0.166880</td>\n",
        "      <td>0.315789</td>\n",
        "      <td>0.111111</td>\n",
@@ -2981,7 +2989,7 @@
        "      <td>0</td>\n",
        "      <td>Almost entirely correct. Some parts differ, bu...</td>\n",
        "      <td>False</td>\n",
-       "      <td>71.537062</td>\n",
+       "      <td>0.715371</td>\n",
        "      <td>0.755993</td>\n",
        "      <td>0.761905</td>\n",
        "      <td>0.700000</td>\n",
@@ -2997,7 +3005,7 @@
        "      <td>1</td>\n",
        "      <td>The comment is entirely correct, but the follo...</td>\n",
        "      <td>False</td>\n",
-       "      <td>50.865618</td>\n",
+       "      <td>0.508656</td>\n",
        "      <td>0.411727</td>\n",
        "      <td>0.625000</td>\n",
        "      <td>0.347826</td>\n",
@@ -3013,7 +3021,7 @@
        "      <td>2</td>\n",
        "      <td>Some parts make sense, but for the main part o...</td>\n",
        "      <td>False</td>\n",
-       "      <td>45.801120</td>\n",
+       "      <td>0.458011</td>\n",
        "      <td>0.388708</td>\n",
        "      <td>0.421053</td>\n",
        "      <td>0.277778</td>\n",
@@ -3029,7 +3037,7 @@
        "      <td>0</td>\n",
        "      <td>Almost entirely correct.</td>\n",
        "      <td>False</td>\n",
-       "      <td>59.635186</td>\n",
+       "      <td>0.596352</td>\n",
        "      <td>0.537907</td>\n",
        "      <td>0.468085</td>\n",
        "      <td>0.355556</td>\n",
@@ -3075,12 +3083,12 @@
        "3  _color)\\n        neutral_color = rgb_bgr_conve...      2   \n",
        "4  .resize(projection_frame, (new_w_proj, new_h_p...      0   \n",
        "\n",
-       "                                             comment  exact_match       chrf  \\\n",
-       "0       Some parts make sense, but mostly incorrect.        False  34.728789   \n",
-       "1  Almost entirely correct. Some parts differ, bu...        False  71.537062   \n",
-       "2  The comment is entirely correct, but the follo...        False  50.865618   \n",
-       "3  Some parts make sense, but for the main part o...        False  45.801120   \n",
-       "4                           Almost entirely correct.        False  59.635186   \n",
+       "                                             comment  exact_match      chrf  \\\n",
+       "0       Some parts make sense, but mostly incorrect.        False  0.347288   \n",
+       "1  Almost entirely correct. Some parts differ, bu...        False  0.715371   \n",
+       "2  The comment is entirely correct, but the follo...        False  0.508656   \n",
+       "3  Some parts make sense, but for the main part o...        False  0.458011   \n",
+       "4                           Almost entirely correct.        False  0.596352   \n",
        "\n",
        "       bleu    rouge1    rouge2    rougeL  \n",
        "0  0.166880  0.315789  0.111111  0.263158  \n",
@@ -3090,7 +3098,7 @@
        "4  0.537907  0.468085  0.355556  0.425532  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3108,7 +3116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3126,7 +3134,6 @@
     }
    ],
    "source": [
-    "# Ensure `manual_label` and `exact_match` are in the DataFrame\n",
     "correlations = {}\n",
     "\n",
     "# Function to compute correlations safely\n",
@@ -3183,40 +3190,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. **Exact Match has no meaningful correlation with the manual labels**, as both Pearson and Spearman correlations are undefined.\n",
+    "1. **Exact Match has no meaningful correlation with the manual labels**, since there are no exact matches.\n",
     "\n",
     "2. **chrf has a moderate correlation**, indicating that this metric aligns reasonably well with manual evaluations.\n",
     "\n",
     "3. **BLEU demonstrates the strongest correlation with manual labels**, making it the most reliable metric in this evaluation.\n",
     "\n",
     "4. **ROUGE-1 and ROUGE-2 and ROUGE-L also show moderate positive correlations**, indicating moderate agreement with manual labels."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Final thoughts - Which metrics to choose?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "1. **Focus on BLEU score for evaluating model performance**\n",
-    "\n",
-    "2. **Consider ROUGE-L, ROUGE-2 and ROUGE-1 scores as secondary metrics**, providing additional insights into the quality of generated outputs compared to reference completions.\n",
-    "\n",
-    "3. **Do not use exact match**, as it shows no significant correlation and may fail to capture the nuances of code generation tasks where variations in output can still be valid."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Summary of Recommended Metrics:\n",
-    "1. **Primary Metric**: BLEU\n",
-    "2. **Secondary Metrics**: ROUGE-L, and maybe ROUGE-2 and ROUGE-1"
    ]
   }
  ],
